<resources>
    <string name="app_name">ProfView</string>
    <string name="callmenu"><![CDATA[<- ВЫЗОВ МЕНЮ!]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="inline_preferences">Уведомления</string>
    <string name="title_checkbox_preference">Получать уведомления</string>
    <string name="summary_checkbox_preference">Включить отображение уведомлений</string>
    <string name="dialog_based_preferences">Учетная запись</string>
    <string name="title_edittext_preference">Логин</string>
    <string name="summary_edittext_preference">Логин на сайте yourplus.ru</string>
    <string name="dialog_title_edittext_preference">Введите логин:</string>
    <string name="title_list_preference">Факультет</string>
    <string name="summary_list_preference">Ваш факультет</string>
    <string name="dialog_title_list_preference">Выберите факультет:</string>
    <string name="launch_preferences">Новости</string>
    <string name="title_screen_preference">Список клубов</string>
    <string name="summary_screen_preference">Список клубов отображаемых в новостях</string>
    <string name="title_password_preference">Пароль</string>
    <string name="summary_password_preference">Пароль на сайте yourplus.ru</string>
    <string name="dialog_title_password_preference">Введите пароль:</string>
    <string name="choosecity">Выберите город</string>
    <string name="choose_achievement_category">Выберите направление</string>
    <string name="choose_achievement_subcategory">Выберите категорию</string>
    <string name="notifications_code_title">Ввести код для получения уведомлений</string>
    <string name="notifications_code_title_ex">Каждый код вводится с новой строки</string>
    <string name="notifications_code_title_dialog">Каждый код вводится с новой строки</string>
    <integer name="achievement_study_start_id">2913</integer>
    <integer name="achievement_art_start_id">2917</integer>
    <integer name="achievement_sport_start_id">2922</integer>
    <integer name="achievement_science_start_id">2517</integer>
    <integer name="achievement_social_start_id">2932</integer>
    <integer name="com_vk_sdk_AppId">5221808</integer>
</resources>
